# gencoder

./: .gitignore  README.md  pyproject.toml
scripts/: download_xP3.sh  ft_xlmr_3b_xp3_en.sh
src/gencoder/: cli.py
src/gencoder/modeling/: collator.py
src/gencoder/tokenizer/: tokenize.py  train_bpe.py
src/gencoder/utils/: arrow_writer.py
tests/gencoder/modeling/: test_collator.py
